Make videos responsive on mobile, correct PayPal link

--- a/style.css
+++ b/style.css
@@ -112,3 +112,16 @@ p {
   height: 400px   !important;
 }
 
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
